tests/golden/errors/foreign_destructure.kso
import "std/json"

json/parse_failure p reason = json/parse_failure 3 "boom"
print "{p} {reason}"
